// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveCatalogItemModal should correctly render modal for duplicate catalog items 1`] = `
<ModalBody
  bsClass="modal-body"
  className="warning-modal-body"
  componentClass="div"
>
  <div>
    <h4>
      Are you sure you want to permanently delete the following catalog item?
    </h4>
    <ul
      key="123"
    >
      <h4>
        <strong>
          name123
        </strong>
      </h4>
    </ul>
  </div>
</ModalBody>
`;

exports[`RemoveCatalogItemModal should correctly render modal for multiple catalog items 1`] = `
<ModalBody
  bsClass="modal-body"
  className="warning-modal-body"
  componentClass="div"
>
  <div>
    <h4>
      Are you sure you want to permanently delete the following catalog item?
    </h4>
    <ul
      key="123"
    >
      <h4>
        <strong>
          name123
        </strong>
      </h4>
    </ul>
    <ul
      key="456"
    >
      <h4>
        <strong>
          name456
        </strong>
      </h4>
    </ul>
  </div>
</ModalBody>
`;

exports[`RemoveCatalogItemModal should correctly render modal for single catalog item 1`] = `
<ModalBody
  bsClass="modal-body"
  className="warning-modal-body"
  componentClass="div"
>
  <div>
    <h4>
      Are you sure you want to permanently delete the following catalog item?
    </h4>
    <ul
      key="123"
    >
      <h4>
        <strong>
          name123
        </strong>
      </h4>
    </ul>
  </div>
</ModalBody>
`;
